      optimizations.
    - Added support for the following GPUs: NVIDIA A100 80GB PCIe, NVIDIA A16,
      NVIDIA PG506-243, NVIDIA PG506-242, NVIDIA CMP 90HX, NVIDIA CMP 70HX,
      NVIDIA RTX A2000, NVIDIA T4G.

  [ Luca Boccassi ]
  * Update nv-readme.ids.
  * Update symbols files.

  [ Andreas Beckmann ]
  * Refresh patches.
  * libcuda1: Add Provides: libcuda-11.4-1{,-i386}.

 -- Luca Boccassi <bluca@debian.org>  Mon, 19 Jul 2021 20:20:52 +0100

nvidia-graphics-drivers (470.42.01-1) experimental; urgency=medium

  * New upstream beta 470.42.01 (2021-06-22).
    - Added support for the following GPUs: A100-PG506-207, A100-PG506-217.
    - Increased the maximum limit on concurrent OpenGL contexts. This
      limit was previously constrained by a fixed-size internal driver
      resource, and is now constrained by available system memory.
    - Applications that exceed the maximum limit on concurrent OpenGL
      contexts will now receive a BadAlloc X error rather than crashing.
    - Fixed a bug that could cause the X server to crash upon shutdown
      with some configurations using GPU screens.
    - Fixed a bug that could cause rendering errors when displaying scaled
      MetaModes using the "Nearest" resampling method.
    - Fixed a bug that could cause OpenGL applications run in PID namespaces to
      hang upon exit, generating warnings such as the following in the X log:
      (WW) NVIDIA: Wait for channel idle timed out.
    - Added support for PRIME Display Offload where both the display offload
      source and display offload sink are driven by the NVIDIA X Driver.
    - Added support for PRIME Display Offload where the display offload source
      is AMDGPU.
    - Fixed a bug that could prevent the driver from applying application
      profiles when running applications through Proton or Wine on a PRIME
      Render Offload configuration.
    - Fixed a bug that could cause NvFBC's "direct capture" to crash the X