@@ -1,0 +1,358 @@
+10DE0FC0
+10DE0FC1
+10DE0FC2
+10DE0FC6
+10DE0FC8
+10DE0FC9
+10DE0FD2
+10DE0FE3
+10DE0FF3
+10DE0FF9
+10DE0FFA
+10DE0FFD
+10DE0FFE
+10DE0FFF
+10DE1001
+10DE1004
+10DE1005
+10DE1007
+10DE1008
+10DE100A
+10DE100C
+10DE1021
+10DE1022
+10DE1023
+10DE1024
+10DE1026
+10DE1027
+10DE1028
+10DE1029
+10DE102A
+10DE102D
+10DE103A
+10DE103C
+10DE1180
+10DE1183
+10DE1184
+10DE1185
+10DE1187
+10DE1188
+10DE1189
+10DE118A
+10DE118E
+10DE118F
+10DE1193
+10DE1194
+10DE1195
+10DE1199
+10DE11B4
+10DE11BA
+10DE11C0
+10DE11C2
+10DE11C3
+10DE11C4
+10DE11C5
+10DE11C6
+10DE11C8
+10DE11CB
+10DE11E3
+10DE11FA
+10DE1280
+10DE1281
+10DE1282
+10DE1284
+10DE1286
+10DE1287
+10DE1288
+10DE1289
+10DE128B
+10DE1290
+10DE1292
+10DE1295
+10DE1299
+10DE1340
+10DE1341
+10DE1344
+10DE1346
+10DE1347
+10DE1348
+10DE1349
+10DE134B
+10DE134D
+10DE134E
+10DE134F
+10DE137A
+10DE137B
+10DE137D
+10DE1380
+10DE1381
+10DE1382
+10DE1390
+10DE1391
+10DE1392
+10DE1393
+10DE1398
+10DE1399
+10DE139A
+10DE139B
+10DE139C
+10DE139D
+10DE13B0
+10DE13B1
+10DE13B2
+10DE13B3
+10DE13B4
+10DE13B6
+10DE13B9
+10DE13BA
+10DE13BB
+10DE13BC
+10DE13C0
+10DE13C2
+10DE13D7
+10DE13D8
+10DE13D9
+10DE13DA
+10DE13F0
+10DE13F1
+10DE13F2
+10DE13F3
+10DE13F8
+10DE13F9
+10DE13FA
+10DE13FB
+10DE1401
+10DE1402
+10DE1406
+10DE1407
+10DE1427
+10DE1430
+10DE1431
+10DE1436
+10DE15F0
+10DE15F7
+10DE15F8
+10DE15F9
+10DE1617
+10DE1618
+10DE1619
+10DE161A
+10DE1667
+10DE174D
+10DE174E
+10DE179C
+10DE17C2
+10DE17C8
+10DE17F0
+10DE17F1
+10DE17FD
+10DE1B00
+10DE1B02
+10DE1B06
+10DE1B30
+10DE1B38
+10DE1B80
+10DE1B81
+10DE1B82
+10DE1B83
+10DE1B84
+10DE1B87
+10DE1BA0
+10DE1BA1
+10DE1BA2
+10DE1BB0
+10DE1BB1
+10DE1BB3
+10DE1BB4
+10DE1BB5
+10DE1BB6
+10DE1BB7
+10DE1BB8
+10DE1BB9
+10DE1BBB
+10DE1BC7
+10DE1BE0
+10DE1BE1
+10DE1C02
+10DE1C03
+10DE1C04
+10DE1C06
+10DE1C07
+10DE1C09
+10DE1C20
+10DE1C21
+10DE1C22
+10DE1C23
+10DE1C30
+10DE1C31
+10DE1C60
+10DE1C61
+10DE1C62
+10DE1C81
+10DE1C82
+10DE1C83
+10DE1C8C
+10DE1C8D
+10DE1C8F
+10DE1C90
+10DE1C91
+10DE1C92
+10DE1C94
+10DE1C96
+10DE1CB1
+10DE1CB2
+10DE1CB3
+10DE1CB6
+10DE1CBA
+10DE1CBB
+10DE1CBC
+10DE1CBD
+10DE1CFA
+10DE1CFB
+10DE1D01
+10DE1D02
+10DE1D10
+10DE1D11
+10DE1D12
+10DE1D13
+10DE1D16
+10DE1D33
+10DE1D34
+10DE1D52
+10DE1D81
+10DE1DB1
+10DE1DB3
+10DE1DB4
+10DE1DB5
+10DE1DB6
+10DE1DB7
+10DE1DB8
+10DE1DBA
+10DE1DF0
+10DE1DF2
+10DE1DF5
+10DE1DF6
+10DE1E02
+10DE1E04
+10DE1E07
+10DE1E09
+10DE1E30
+10DE1E36
+10DE1E78
+10DE1E81
+10DE1E82
+10DE1E84
+10DE1E87
+10DE1E89
+10DE1E90
+10DE1E91
+10DE1E93
+10DE1EB0
+10DE1EB1
+10DE1EB4
+10DE1EB5
+10DE1EB6
+10DE1EB8
+10DE1EC2
+10DE1EC7
+10DE1ED0
+10DE1ED1
+10DE1ED3
+10DE1EF5
+10DE1F02
+10DE1F06
+10DE1F07
+10DE1F08
+10DE1F09
+10DE1F0A
+10DE1F0B
+10DE1F10
+10DE1F11
+10DE1F12
+10DE1F14
+10DE1F15
+10DE1F36
+10DE1F42
+10DE1F47
+10DE1F50
+10DE1F51
+10DE1F54
+10DE1F55
+10DE1F76
+10DE1F82
+10DE1F91
+10DE1F95
+10DE1F96
+10DE1F97
+10DE1F98
+10DE1F99
+10DE1F9C
+10DE1F9D
+10DE1FB0
+10DE1FB1
+10DE1FB2
+10DE1FB8
+10DE1FB9
+10DE1FBA
+10DE1FBB
+10DE1FBC
+10DE1FDD
+10DE1FF9
+10DE20B0
+10DE20B1
+10DE20B2
+10DE20B3
+10DE20B5
+10DE20B6
+10DE20B7
+10DE20F0
+10DE20F1
+10DE20F2
+10DE2182
+10DE2184
+10DE2187
+10DE2188
+10DE2189
+10DE2191
+10DE2192
+10DE21C4
+10DE21D1
+10DE2204
+10DE2206
+10DE2208
+10DE220D
+10DE2216
+10DE2230
+10DE2231
+10DE2235
+10DE2236
+10DE2237
+10DE2482
+10DE2484
+10DE2486
+10DE2488
+10DE2489
+10DE248A
+10DE249C
+10DE249D
+10DE24B0
+10DE24B6
+10DE24B7
+10DE24B8
+10DE24DC
+10DE24DD
+10DE2503
+10DE2504
+10DE2520
+10DE2523
+10DE2531
+10DE2560
+10DE2563
+10DE25A0
+10DE25A2
+10DE25A5
+10DE25B6
+10DE25B8
+10DE25E0
+10DE25E2
+10DE25E5
