@@ -6,4 +6,5 @@ debian/detect/nvidia-tesla-418.ids		usr/share/nvidia/	[amd64 ppc64el]
 debian/detect/nvidia-tesla-440.ids		usr/share/nvidia/	[amd64 ppc64el]
 debian/detect/nvidia-tesla-450.ids		usr/share/nvidia/	[amd64 arm64 ppc64el]
 debian/detect/nvidia-tesla-460.ids		usr/share/nvidia/	[amd64 arm64 ppc64el]
+debian/detect/nvidia-tesla-470.ids		usr/share/nvidia/	[amd64 arm64 ppc64el]
 nvidia.ids					usr/share/nvidia/	[!ppc64el]
